--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -10,5 +10,10 @@
   </div>
   <footer role="contentinfo">{% include footer.html %}</footer>
   {% include after_footer.html %}
+
+  <script src="{{ root_url }}/javascripts/modernizr-2.0.js"></script>
+  <script src="{{ root_url }}/javascripts/ender.js"></script>
+  <script src="{{ root_url }}/javascripts/octopress.js" type="text/javascript"></script>
+  {% include google_analytics.html %}
 </body>
 </html>
